--- a/homePage.html
+++ b/homePage.html
@@ -10,10 +10,10 @@
 		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 	</head>
 	<body>
-	<div class = "navbar navbar-default navbar-fixed-top =" role="navigation">
+	<div class="navbar navbar-default navbar-fixed-top" role="navigation">
 		<div class = "container containerColor">
 			<div class = "navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle ="collapse" data-navbar=".navbar-collapse">
+				<button type="button" class="navbar-toggle" data-toggle ="collapse" data-target=".navbar-collapse">
 				<span class="sr-only"></span>
 				<span class = "icon-bar"></span>
 				<span class = "icon-bar"></span>
@@ -22,8 +22,8 @@
 				<a class="navbar-brand" href="#">Peak Saver</a>
 			</div>
 			<div class="navbar-collapse collapse">
-			<ul class="nav navbar-nav navbar-right">
-				<div class="dropdown">
+				<ul class="nav navbar-nav navbar-right">
+				<li><div class="dropdown">
 					<button class = "btn btn-default dropdown-toggle" type ="button" id="dropdownMenu1" data-Toggle="dropdown" aria-expanded="true">
 					Account Name <span class="caret"></span>
 					</button>
@@ -31,13 +31,11 @@
 						<li role = "presentation"><a role="menuitem" tabindex="-1" href="#">Change Password</a></li>
 						<li role = "presentation"><a role="menuitem" tabindex="-1" href="#">Manage User</a></li>
 						<li role = "presentation"><a role="menuitem" tabindex="-1" href="#">My Contact Info</a></li>
-						<li role = "presentation" class="divider">
+						<li role = "presentation" class="divider"></li>
 						<li role = "presentation" class="logoutButton"><a role="menuitem" tabindex="-1" href="#">Logout</a></li>
 					</ul>
-				</div>
+				</div></li>
 				</ul>
-			</div>
-			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-left">
 					<li class="active"><a href="#">Home</a></li>
 					<li><a href="#">Thermostats</a></li>
@@ -60,8 +58,9 @@
 			</div>
 			</div><br>
 			<div class = "container containerColor">
-				<div>
-				<p>
+				<div id="targTempTitle">
+				Your Target Temperature Is
+				<p></p>
 				</div>
 			</div>
 		</div>
