--- a/analysis.html
+++ b/analysis.html
@@ -3,57 +3,81 @@
 <head>
 <meta charset="UTF-8">
 <link href="analysis.css" rel="stylesheet">
-<title>Insert title here</title>
+<title>Schedule Analysis</title>
 </head>
 <body>
-Analysis of your schedule: StandardSchedule
 
+<div class="title">
+Analysis of your schedule: <span id="name">Schedule_1</span>
+</div>
+
+<div class="graphSpace">
 <div class="frameContainer">
-	<iframe class="graph" src="graph.html" seamless frameborder="0"></iframe>
+	<iframe id="graph" class="graph" src="graph.html" seamless frameborder="0"></iframe>
 </div>
 
-<div class="lowerGraphLabels">
-	<div class="horizontalMarkerContainer">
-		<div class="horizontalMarker">
-		Wake Up
+	<div class="lowerGraphLabels">
+		<div class="horizontalMarkerContainer">
+			<div class="horizontalMarker">
+			Wake Up
+			</div>
+			<div class="horizontalMarker">
+			Leave
+			</div>
+			<div class="horizontalMarker">
+			Return
+			</div>
+			<div class="horizontalMarker">
+			Sleep
+			</div>
 		</div>
-		<div class="horizontalMarker">
-		Leave
+		<div style="text-align:center;font-size:1.2em">
+			Time Frame
 		</div>
-		<div class="horizontalMarker">
-		Return
-		</div>
-		<div class="horizontalMarker">
-		Sleep
-		</div>
+		<div class="map">
+			<svg width="1em" height="1em" viewBox="0 0 20 20">
+				<rect width="20" height="20" style="fill:red;"/>
+			</svg>
+			User Schedule
+			<svg width="1em" height="1em" viewBox="0 0 20 20">
+				<rect width="20" height="20" style="fill:blue;"/>
+			</svg>
+			Recommended Settings
+			</div>
 	</div>
-	<div style="text-align:center;font-size:1.2em">
-		Time Frame
-	</div>
-	<div class="map">
-		<svg width="1em" height="1em" viewBox="0 0 20 20">
-			<rect width="20" height="20" style="fill:red;"/>
-		</svg>
-		User Schedule
-	<svg width="1em" height="1em" viewBox="0 0 20 20">
-			<rect width="20" height="20" style="fill:blue;"/>
-		</svg>
-		Recommended Settings
-		</div>
 </div>
 
-Recommendations:
-<select name="test">
-<option value="">
-</option>
-</select>
+<div class="recommendation">
+	Recommendations:
+	
+	<select class="recommendations" onchange="changed(this)">
+		<option>Schedule_1</option>
+		<option>Tom's Summer Schedule</option>
+	</select>
+</div>
+
 <div class="lowerOptions">
-[SCHEDLE WITH > SAVING] Saves you $50
-<br>
-Use recommended schedule?
-<br>
-<input type="button" value="Use"/>
-<input type="button" value="Cancel"/>
+	[SCHEDLE WITH > SAVING] Saves you $50
+	<br>
+	<br>
+	Use recommended schedule?
+	<br>
+	<input class="button" type="button" value="Use" onclick="confirmBox();"/>
+	<input class="button" type="button" value="Cancel" onclick="leave()"/>
 </div>
+
+<script>
+function changed(elem){
+	document.getElementById('name').innerHTML=elem.value;
+	document.getElementById("graph").src="graph.html";
+}
+function confirmBox() {
+	 if (confirm("Are you sure you want to apply these settings?"))
+	   leave();
+}
+function leave(){
+	document.location.href = "homePage.html";
+}
+</script>
 </body>
 </html>
