--- a/schedule-create.html
+++ b/schedule-create.html
@@ -51,7 +51,7 @@
 					</li>
 				</ul>
 				
-                <a class="navbar-brand" href="index.html">Thermostat</a>
+                <a class="navbar-brand" href="index.html">Create Schedule</a>
             </div>
 			<!-- / Navigation Header -->
 
