--- a/schedule-create.html
+++ b/schedule-create.html
@@ -17,6 +17,12 @@
 	<link href="css/bootstrap-touchspin.css" rel="stylesheet">
 	<link href="css/bootstrap-select.css" rel="stylesheet">
 
+	<style>
+	.samewidth {
+		min-width:70px;
+		text-align:left;
+	}
+	</style>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -126,7 +132,7 @@
 							<div class="col-xs-8 pull-left">
 								<div class="input-group">
 								  <span class="input-group-addon" id="sizing-addon2">Name</span>
-								  <input type="text" class="form-control" placeholder="" aria-describedby="sizing-addon2">
+								  <input type="text" class="form-control" maxlength="25" placeholder="Required, up to 25 characters" aria-describedby="sizing-addon2">
 								</div>
 							</div>
 							<div class="col-xs-4 pull-right">
@@ -147,7 +153,7 @@
 							<form class="form-inline">
 								<div class="col-xs-6">
 									<div class="input-group bootstrap-timepicker">
-										<span class="input-group-addon" id="sizing-addon2">Wake</span>
+										<span class="input-group-addon samewidth">Wake</span>
 										<input class="form-control" id="timepicker1" type="text">
 										<span class="input-group-addon"><i class="glyphicon glyphicon-time"></i></span>
 									</div>
@@ -162,7 +168,7 @@
 							<form class="form-inline">
 								<div class="col-xs-6">
 									<div class="input-group bootstrap-timepicker">
-										<span class="input-group-addon" id="sizing-addon2">Leave</span>
+										<span class="input-group-addon samewidth">Leave</span>
 										<input class="form-control" id="timepicker2" type="text">
 										<span class="input-group-addon"><i class="glyphicon glyphicon-time"></i></span>
 									</div>
@@ -177,7 +183,7 @@
 							<form class="form-inline">
 								<div class="col-xs-6">
 									<div class="input-group bootstrap-timepicker">
-										<span class="input-group-addon" id="sizing-addon2">Return</span>
+										<span class="input-group-addon samewidth">Return</span>
 										<input class="form-control" id="timepicker3" type="text">
 										<span class="input-group-addon"><i class="glyphicon glyphicon-time"></i></span>
 									</div>
@@ -193,7 +199,7 @@
 							<form class="form-inline">
 								<div class="col-xs-6">
 									<div class="input-group bootstrap-timepicker">
-										<span class="input-group-addon" id="sizing-addon2">Sleep</span>
+										<span class="input-group-addon samewidth">Sleep</span>
 										<input class="form-control" id="timepicker4" type="text">
 										<span class="input-group-addon"><i class="glyphicon glyphicon-time"></i></span>
 									</div>
@@ -223,7 +229,7 @@
 						<div class="col-lg-12">
 							<div class="btn-group pull-right" role="group" aria-label="...">
 							  <button type="button" class="btn btn-default btn-lg">Reset</button>
-							  <button type="button" class="btn btn-default btn-lg">Submit</button>
+							  <a class="btn btn-default btn-lg" href="viewSchedules.html">Submit</a>
 							</div>
 						</div>
 					
@@ -244,6 +250,7 @@
 	<script src="js/bootstrap-timepicker.min.js"></script>
 	<script src="js/bootstrap-touchspin.js"></script>
 	<script src="js/bootstrap-select.js"></script>
+	<script src="js/validator.js"></script>
     <script type="text/javascript">
             $('#timepicker1').timepicker();
 			$('#timepicker2').timepicker();
