Bad Character Fix

--- a/schedule-create.html
+++ b/schedule-create.html
@@ -342,7 +342,7 @@
                 decimals: 1,
                 boostat: 5,
                 maxboostedstep: 10,
-                postfix: 'Â°C'
+                postfix: '°C'
             });
         </script>
 
