--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
             <div class="container-fluid">
                 <div class="row">
 				
-      <form class="form-signin">
+      <form class="form-signin" action="homePage.html">
         <h2 class="form-signin-heading">Please login</h2>
         <label for="inputEmail" class="sr-only">Username</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+        <input type="text" id="inputEmail" class="form-control" placeholder="Username" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
         <div class="checkbox">
