Fixed vertical text spacing

--- a/graph.html
+++ b/graph.html
@@ -7,8 +7,7 @@
 <body>
 <div class="leftLabels">
 	<div class="verticalText">
-	<br>
-		Cost of Consuming KW/Hr
+		Cost in KW/Hr
 	</div>
 	<div style="position:absolute;top:10%;width:2em;right:0">
 	10 -
