--- a/viewSchedules.html
+++ b/viewSchedules.html
@@ -49,9 +49,9 @@
 					</li>
 				</ul>
 				<style>
-	a {text-decoration: underline;}
+	#titlePage {text-decoration: underline;}
 </style>
-                <a class="navbar-brand" href="homePage.html">PeakSaver Home</a>
+                <a id="titlePage" class="navbar-brand" href="homePage.html">PeakSaver Home</a>
             </div>
 			<!-- / Navigation Header -->
 
@@ -88,17 +88,9 @@
                 </li>
                 <!-- /.dropdown -->
                 <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                        <i class="fa fa-clock-o fa-fw"></i> History <i class="fa fa-caret-down"></i>
+                    <a href="history-thermostat.html">
+                        <i class="fa fa-clock-o fa-fw"></i> History
                     </a>
-                    <ul class="dropdown-menu dropdown-user">
-                        <li><a href="#"> All</a>
-                        </li>
-                        <li><a href="#"> Schedule</a>
-                        </li>
-                        <li><a href="#"> Thermostat</a>
-                        </li>
-                    </ul>
                     <!-- /.dropdown-user -->
                 </li>
                 <!-- /.dropdown -->
