All Nav Bars Updated

--- a/schedule-create.html
+++ b/schedule-create.html
@@ -56,8 +56,10 @@
 						</ul>
 					</li>
 				</ul>
-				
-                <a class="navbar-brand" href="index.html">Create Schedule</a>
+				<style>
+	#titlePage {text-decoration: underline;}
+</style>
+                <a id="titlePage" class="navbar-brand" href="homePage.html">PeakSaver Home</a>
             </div>
 			<!-- / Navigation Header -->
 
@@ -94,20 +96,13 @@
                 </li>
                 <!-- /.dropdown -->
                 <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                        <i class="fa fa-clock-o fa-fw"></i> History <i class="fa fa-caret-down"></i>
+                    <a href="history-thermostat.html">
+                        <i class="fa fa-clock-o fa-fw"></i> History
                     </a>
-                    <ul class="dropdown-menu dropdown-user">
-                        <li><a href="#"> All</a>
-                        </li>
-                        <li><a href="#"> Schedule</a>
-                        </li>
-                        <li><a href="#"> Thermostat</a>
-                        </li>
-                    </ul>
                     <!-- /.dropdown-user -->
                 </li>
                 <!-- /.dropdown -->
+				
             </ul>
             <!-- /.navbar-top-links -->
 
