--- a/analysis.html
+++ b/analysis.html
@@ -30,6 +30,7 @@
 <body>
 
     <div id="wrapper">
+
         <!-- Navigation -->
         <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
             <div class="navbar-header">
@@ -49,14 +50,16 @@
 						</ul>
 					</li>
 				</ul>
-				
-                <a class="navbar-brand" href="index.html">Thermostat</a>
+				<style>
+	#titlePage {text-decoration: underline;}
+</style>
+                <a id="titlePage" class="navbar-brand" href="homePage.html">PeakSaver Home</a>
             </div>
 			<!-- / Navigation Header -->
 
             <ul class="nav navbar-top-links navbar-right">
 			<li class="dropdown">
-                    <a href="thermostats.html" class="btn">
+                    <a href="viewThermostats.html" class="btn">
                        Thermostats
                     </a>
 			</li>
@@ -66,56 +69,20 @@
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                         <i class="fa fa-calendar fa-fw"></i> Schedules <i class="fa fa-caret-down"></i>
                     </a>
-                    <ul class="dropdown-menu dropdown-alerts dropdown-menu-left">
+                    <ul class="dropdown-menu dropdown-user dropdown-menu-left">
                         <li>
-                            <a href="#">
+                            <a href="viewSchedules.html">
                                 <div>
-                                    <i class="fa fa-comment fa-fw"></i> New Comment
-                                    <span class="pull-right text-muted small">4 minutes ago</span>
+                                     View Schedules
                                 </div>
                             </a>
                         </li>
                         <li class="divider"></li>
                         <li>
-                            <a href="#">
+                            <a href="schedule-create.html">
                                 <div>
-                                    <i class="fa fa-twitter fa-fw"></i> 3 New Followers
-                                    <span class="pull-right text-muted small">12 minutes ago</span>
+                                     Create Schedule
                                 </div>
-                            </a>
-                        </li>
-                        <li class="divider"></li>
-                        <li>
-                            <a href="#">
-                                <div>
-                                    <i class="fa fa-envelope fa-fw"></i> Message Sent
-                                    <span class="pull-right text-muted small">4 minutes ago</span>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="divider"></li>
-                        <li>
-                            <a href="#">
-                                <div>
-                                    <i class="fa fa-tasks fa-fw"></i> New Task
-                                    <span class="pull-right text-muted small">4 minutes ago</span>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="divider"></li>
-                        <li>
-                            <a href="#">
-                                <div>
-                                    <i class="fa fa-upload fa-fw"></i> Server Rebooted
-                                    <span class="pull-right text-muted small">4 minutes ago</span>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="divider"></li>
-                        <li>
-                            <a class="text-center" href="#">
-                                <strong>See All Alerts</strong>
-                                <i class="fa fa-angle-right"></i>
                             </a>
                         </li>
                     </ul>
@@ -123,26 +90,13 @@
                 </li>
                 <!-- /.dropdown -->
                 <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                        <i class="fa fa-clock-o fa-fw"></i> History <i class="fa fa-caret-down"></i>
+                    <a href="history-thermostat.html">
+                        <i class="fa fa-clock-o fa-fw"></i> History
                     </a>
-                    <ul class="dropdown-menu dropdown-user">
-                        <li><a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
-                        </li>
-                        <li class="divider"></li>
-                        <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
-                        </li>
-                    </ul>
                     <!-- /.dropdown-user -->
                 </li>
                 <!-- /.dropdown -->
-				<li class="dropdown">
-				<a href="index.html" class="btn">
-                       <i class="fa fa-home fa-fw"></i> Home
-                </a>
-				</li>
+				
             </ul>
             <!-- /.navbar-top-links -->
 
