--- a/homePage.html
+++ b/homePage.html
@@ -89,13 +89,24 @@
         </nav>
         
 	<div class = "container">
-	<h3>Home</h3>
-	<table id="controlSection">
-	<img  id="thermostatGraphic" src="images/thermostatGraphic.svg"></img>
-		<tr><td><p id="targTempTitle">
-		Your target temperature is
-		</p></td></tr>
-		<tr><td><div id="thermostatSection">
+	<div id="controlSection">
+	<table style="width:100%">
+	
+		<tr>
+			<td>
+				<h3>Home</h3>
+			</td>
+			<td>
+				<div id="targTempTitle">
+					Your target temperature is
+				</div>
+			</td>
+		</tr>
+		<tr>
+			<td>
+				<img  id="thermostatGraphic" src="images/thermostatGraphic.svg"></img>
+			</td>
+		<td><div id="thermostatSection">
 			
 			<table id="controlPanel" class="inlineSection">
 				<tr>
@@ -130,7 +141,7 @@
 		</div>
 		</td>
 		</tr>
-		</table><br><br>
+		</table></div>
 		<div id="tempChangeSection">
 		<table id="settingsButtons">
 		<tr>
