Fixed text sizing

--- a/homePage.html
+++ b/homePage.html
@@ -103,7 +103,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td>
+			<td style="text-align:center;">
 				<img  id="thermostatGraphic" src="images/thermostatGraphic.svg"></img>
 			</td>
 		<td><div id="thermostatSection">
