--- a/schedule-create.html
+++ b/schedule-create.html
@@ -22,6 +22,10 @@
 		min-width:70px;
 		text-align:left;
 	}
+	
+	.navbar {
+	 font-size: 0.97em;
+	}
 	</style>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
