--- a/viewThermostats.html
+++ b/viewThermostats.html
@@ -15,7 +15,11 @@
     <link href="css/style.css" rel="stylesheet">
 	<link href="css/bootstrap-table.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
-
+	<style>
+	.navbar {
+	 font-size: 0.97em;
+	}
+	</style>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
